# xn_esp32_web_wifi_manager

./: .gitignore  README.md
components/xn_web_wifi_manger/: CMakeLists.txt
components/xn_web_wifi_manger/include/: storage_module.h  web_module.h  wifi_module.h  xn_wifi_manage.h
components/xn_web_wifi_manger/src/: storage_module.c  web_module.c  wifi_module.c  xn_wifi_manage.c
components/xn_web_wifi_manger/wifi_spiffs/: app.css  app.js  index.html
